--- a/bib/references.bib
+++ b/bib/references.bib
@@ -80,7 +80,7 @@
   journal = {Hindawi},
   year = {2024},
   month = {April},
-  keywords = {Uncontrolled data generation from IoT (Internet of Things) devices， Article},
+  keywords = {Uncontrolled data generation from IoT (Internet of Things) devices, Article},
   volume = {2024},
   number = {},
   series = {},
